<resources>
    <string name="app_name">Vision</string>

    <string name="gate_textview">GATE</string>
    <string name="psu_textview">PSU</string>
    <string name="mpsc_textview">MPSC</string>
    <string name="ies_textview">IES</string>
    <string name="header">Vision Engg. Academy</string>

    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="register_new_user"> New User Register </string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="button_send">Send</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>

    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email">Email Id</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="present_address">Current Address</string>
    <string name="permanant_address">Permanent Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="button_next">Next</string>
    <string name="button_payment">Proceed for Payment</string>

    <string name="about_ies">About IES</string>
    <string name="about_psu">About PSU</string>
    <string name="about_mpsc">About MPSC</string>
    <string name="syllabus">Syllabus</string>
    <string name="exam_pattern">Exam Pattern</string>
    <string name="eligibility">Eligibility</string>
    <string name="previous_question">Previous Question </string>


    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash_activity">Splash_activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
