<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_psu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/txtAboutIes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_ies"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/txtsyllabus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syllabus"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    <TextView
        android:id="@+id/txtExamPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_pattern"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    <TextView
        android:id="@+id/txtEligibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eligibility"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    <TextView
        android:id="@+id/txtPreviousQues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_question"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

</LinearLayout>
